Update and rename schportal.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Pritobella School" content="Pritobella School, Secondary, Primary, Pre-school,
+    <meta name="Tender Grape School" content="Tender grape School, Secondary, Primary, Pre-school,
   Oworonshoki, Day School Lagos Nigeria, About Us, Team, Contact Us, Gallery">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style3.css">
