--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		</style>
    
   </head>
-  <header class="w3-card-4 w3-top w3-deep-purple">
-   <div class="schname">Pritobella <span style="color: rgba(247, 243, 25, 0.986);">School</span> </div>
+  <header class="w3-card-4 w3-top w3-green">
+   <div class="schname">Tender Grape <span style="color: rgba(8, 8, 8, 0.986);">School</span> </div>
     
     <nav class="topnav" id="myTopnav" >
-            <span class="schn w3-">Pritobella <span style="color: rgba(247, 243, 25, 0.986);" >School</span></span>
-        <a href="index.html" >Home</a>
+            <span class="schn w3-">Tender Grape <span style="rgba(8, 8, 8, 0.986);" >School</span></span>
+        <a href="#" >Home</a>
        <a href="#">about Us</a>
        <a href="#">service</a>
        <a href="#">Contact</a>
