--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        <a href="#">about Us</a>
        <a href="#">service</a>
        <a href="#">Contact</a>
-       <a href="schportal.html" class="active">School Portal</a>
+       <a href="#" class="active">School Portal</a>
              
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i></a>
