--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                   <h2 class="w3-center">School Facilities</h2>
                   <img src="images/i1.png" style="display: block; margin-left: auto; margin-right: auto;">
               </div>
-              <h4>Pritobella Schools Parades an enviable functional infrastructure to enhance learning. 
+              <h4>Tender grape Schools Parades an enviable functional infrastructure to enhance learning. 
                 The prominent among them are:</h4>
           </div>
           
@@ -578,7 +578,7 @@
                 <h2 class="w3-center">SCHOOL CURRICULUM</h2>
                 <img src="images/i2.png" style="display: block; margin-left: auto; margin-right: auto;">
               </div>
-              <h4 class="w3-center">Pritobella Schools makes use of the curriculum recommended by the 
+              <h4 class="w3-center">Tender grape Schools makes use of the curriculum recommended by the 
                 Ministry of Education. </h>
           </div>
 
