--- a/schportal.html
+++ b/schportal.html
@@ -444,7 +444,7 @@
                               <div id="js1a3rdterm" class="myRecord">
                                   <p><a href="#" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Mid_Exam</a><a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p>
                                 <p><a href="https://forms.gle/D3xrMGzFzKhkVv32A" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Exam</a><a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p> 
-                              </div> https://forms.gle/YFiWnuhaCrERALALA
+                              </div>
 
                                  
                                 
@@ -483,7 +483,7 @@
 			                              <div id="js1b3rdterm" class="myRecord">
 			                                  <p><a href="#" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Mid_Exam</a><a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p>
 			                                <p><a href="https://forms.gle/YFiWnuhaCrERALALA" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Exam</a><a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p> 
-			                              </div> https://forms.gle/5BrF5ZXxau1kDaMg9
+			                              </div> 
 				    </div>
 				  </div>
 			   </div>
