--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Pritobella School" content="Pritobella School, Secondary, Primary, Pre-school,
+    <meta name="Pritobella School" content="Tender grapes School, Secondary, Primary, Pre-school,
                 Oworonshoki, Day School Lagos Nigeria, About Us, Team, Contact Us, Gallery">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style3.css">
@@ -13,10 +13,10 @@
    
   </head>
   <header class="w3-card-4 w3-top" style="background-color: #05944c;">
-   <div class="schname">Tender Grape <span style="color: rgba(8, 8, 8, 0.986);">School</span> </div>
+   <div class="schname">Tender Grapes <span style="color: rgba(8, 8, 8, 0.986);">School</span> </div>
     
     <nav class="topnav" id="myTopnav" >
-            <span class="schn">TenderGrape <span style="color: rgba(8, 8, 8, 0.986);">School</span></span>
+            <span class="schn">TenderGrapes <span style="color: rgba(8, 8, 8, 0.986);">School</span></span>
         <a href="#" class="active">Home</a>
        <a href="#">about Us</a>
        <a href="#">service</a>
@@ -59,7 +59,7 @@
                   <h2 class="w3-center">School Facilities</h2>
                   <img src="images/i1.png" style="display: block; margin-left: auto; margin-right: auto;">
               </div>
-              <h4>Pritobella Schools Parades an enviable functional infrastructure to enhance learning. 
+              <h4>Tender grapes Schools Parades an enviable functional infrastructure to enhance learning. 
                 The prominent among them are:</h4>
           </div>
           
@@ -68,7 +68,7 @@
                 <h2 class="w3-center">SCHOOL CURRICULUM</h2>
                 <img src="images/i2.png" style="display: block; margin-left: auto; margin-right: auto;">
               </div>
-              <h4 class="w3-center">Pritobella Schools makes use of the curriculum recommended by the 
+              <h4 class="w3-center">Tender grapes Schools makes use of the curriculum recommended by the 
                 Ministry of Education. </h>
           </div>
 
@@ -120,7 +120,7 @@
     <div class="w3-col s4 w3-mobile w3-display-container w3-hover-opacity ">
       <div class="w3-card"><img src="images/g1.jpg" class="" style="width:100%" >
         <div class="w3-container w3-black">
-          <h5>Pritobella</h5>
+          <h5>Tender Grapes</h5>
         </div>
       </div>
       <div class="w3-display-middle w3-display-hover w3-xlarge w3-col s4">
@@ -131,7 +131,7 @@
      <div class="w3-col s4 w3-mobile w3-display-container w3-hover-opacity">
       <div class="w3-card"><img src="images/g2.jpg" class="" style="width:100%" >
         <div class="w3-container w3-black">
-          <h5>Pritobella</h5>
+          <h5>Tender Grapes</h5>
         </div>
       </div>
       <div class="w3-display-middle w3-display-hover w3-xlarge w3-col s4">
@@ -142,7 +142,7 @@
       <div class="w3-col s4 w3-mobile w3-display-container w3-hover-opacity">
         <div class="w3-card"><img src="images/g6.png" class="" style="width:100%" >
           <div class="w3-container w3-black">
-            <h5>Pritobella</h5>
+            <h5>Tender Grapes</h5>
           </div>
         </div>
        <div class="w3-display-middle w3-display-hover w3-xlarge w3-col s4 ">
@@ -165,8 +165,8 @@
         <div class="w3-col l3 s12 w3-card  w3-green w3-round w3-padding w3-margin-top" ><h1 class="">Contact Us </h1></div>
 
       <div class="w3-row-padding">
-          <div class="w3-third"><address><h2 style="margin-bottom: 0;">Tender Grape One:</h2><p style="margin-top: 0;"><span style="color: #ffffff;">Primary School Address: 11 off Surulere Awolowo Street Oworonshoki, Lagos.</span></p>
-            <h2 style="margin-bottom: 0;">Tender Grape Two:</h2><span>TenderGrape Secondary School Address: 11 off Surulere Awolowo Street Oworonshoki, Lagos..</span>
+          <div class="w3-third"><address><h2 style="margin-bottom: 0;">Tender Grapes One:</h2><p style="margin-top: 0;"><span style="color: #ffffff;">Primary School Address:37 off Surulere Awolowo Street Oworonshoki, Lagos.</span></p>
+            <h2 style="margin-bottom: 0;">Tender Grapes Two:</h2><span>TenderGrape Secondary School Address: 37 off Surulere Awolowo Street Oworonshoki, Lagos..</span>
                   </address>
           </div>
 
@@ -181,14 +181,14 @@
 
           <div class="w3-third">
             <h1 style="margin-bottom: 0;"  class="">Telphone:</h1>
-            080337678965, 07033839573 
+            08165543388, 07080844570 
           </div>
 
       </div>
 
                     <div class="w3-center" style= "margin:auto;"> <p>Copy Right Reserved by Calibral 2023 </p> 
                       <a href="#top" class="w3-hover-green w3-card w3-padding w3-button w3-mobile" style="background-color: #05944c;
-                      height: 65px; width:45%; font-size:2.5em;">TenderGrape School</a>
+                      height: 65px; width:45%; font-size:2.5em;">TenderGrapes School</a>
                     </div>
       </footer>
 
