--- a/schportal.html
+++ b/schportal.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="tendergrape School" content="tendergrape School, Secondary, Primary, Pre-school,
+    <meta name="tendergrape School" content="tendergrapes School, Secondary, Primary, Pre-school,
   Oworonshoki, Day School Lagos Nigeria, About Us, Team, Contact Us, Gallery">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style3.css">
@@ -17,10 +17,10 @@
    
   </head>
   <header class="w3-card-4 w3-top" style="background-color: #05944c;">
-   <div class="schname">Tender Grape <span style="color: rgba(8, 8, 8, 0.986);">School</span> </div>
+   <div class="schname">Tender Grapes <span style="color: rgba(8, 8, 8, 0.986);">School</span> </div>
     
     <nav class="topnav" id="myTopnav" >
-            <span class="schn w3-">Tender Grape <span style="color: rgba(8, 8, 8, 0.986);">School</span></span>
+            <span class="schn w3-">Tender Grapes <span style="color: rgba(8, 8, 8, 0.986);">School</span></span>
         <a href="index.html" >Home</a>
        <a href="#">about Us</a>
        <a href="#">service</a>
@@ -831,7 +831,7 @@
                   <h2 class="w3-center">School Facilities</h2>
                   <img src="images/i1.png" style="display: block; margin-left: auto; margin-right: auto;">
               </div>
-              <h4>Pritobella Schools Parades an enviable functional infrastructure to enhance learning. 
+              <h4>Tender Grapes Schools Parades an enviable functional infrastructure to enhance learning. 
                 The prominent among them are:</h4>
           </div>
           
@@ -840,7 +840,7 @@
                 <h2 class="w3-center">SCHOOL CURRICULUM</h2>
                 <img src="images/i2.png" style="display: block; margin-left: auto; margin-right: auto;">
               </div>
-              <h4 class="w3-center">Pritobella Schools makes use of the curriculum recommended by the 
+              <h4 class="w3-center">Tender Grapes Schools makes use of the curriculum recommended by the 
                 Ministry of Education. </h>
           </div>
 
@@ -866,7 +866,7 @@
         <div class="w3-col l3 s12 w3-card  w3-green w3-round w3-padding w3-margin-top" ><h1 class="">Contact Us </h1></div>
 
       <div class="w3-row-padding">
-          <div class="w3-third"><address><h2 style="margin-bottom: 0;">Tender Grape:</h2><p style="margin-top: 0;"><span style="color: #ffffff;">School Address: 45 Surulere Awolowo Street Oworonshoki, Lagos.</span></p>
+          <div class="w3-third"><address><h2 style="margin-bottom: 0;">Tender Grapes:</h2><p style="margin-top: 0;"><span style="color: #ffffff;">School Address: 37 Surulere Awolowo Street Oworonshoki, Lagos.</span></p>
                               </address>
           </div>
 
@@ -881,14 +881,14 @@
 
           <div class="w3-third">
             <h1 style="margin-bottom: 0;"  class="">Telphone:</h1>
-            08036467776, 07033839573 
+            08165543388, 07080844570 
           </div>
 
       </div>
 
                 <div class="w3-center" style= "margin:auto;"> <p>Copy Right Reserved by Calibral 2023 </p> 
                   <a href="#top" class="w3-hover-green w3-card w3-padding w3-button w3-mobile" style="background-color: #05944c;
-                  height: 65px; width:45%; font-size:2.5em;">TenderGrape School</a>
+                  height: 65px; width:45%; font-size:2.5em;">TenderGrapes School</a>
                 </div>
 
       </footer>
