--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     <br><br>
     <section class="w3-display-container w3-center w3-padding-16 slidebox" style="max-width:100%;" >
       <div class="w3-content w3-padding" style="margin-left:px;" style="max-width: 800px;">
-        <img src="images/p1.png" class="mySlider" style="width: 100%;">
-        <img src="images/p2.png" class="mySlider" style="width: 100%;">
-        <img src="images/p3.png" class="mySlider" style="width: 100%;">
+        <img src="images/s2.jpg" class="mySlider" style="width: 100%;">
+        <img src="images/s4.jpg" class="mySlider" style="width: 100%;">
+        <img src="images/s1.jpg" class="mySlider" style="width: 100%;">
+	      <img src="images/s3.jpg" class="mySlider" style="width: 100%;">
       </div>
 
     </section>
