--- a/schportal.html
+++ b/schportal.html
@@ -597,7 +597,7 @@
                <!--Models4Class-->
                       <div class="w3-modal" id="id05">
                         <div class="w3-modal-content">
-                          <div class="w3-container w3-padding w3-lime " style="text-align:Left; line-height:1.8;">
+                          <div class="w3-container w3-padding w3-pale-green " style="text-align:Left; line-height:1.8;">
                             <span onclick="document.getElementById('id05').style.display='none'" class="w3-button w3-display-topright w3-red">&times;</span>
                             <h3 class="w3-panel w3-green" style="text-align:center">Select A Task <br>Jss3 A</h3>
                                   		<div class=w3-row-padding>
@@ -633,12 +633,12 @@
 
                       <div class="w3-modal" id="id06">
 			    <div class="w3-modal-content">
-				    <div class="w3-container w3-padding w3-lime " style="text-align:Left; line-height:1.8;">
+				    <div class="w3-container w3-padding w3-pale-green " style="text-align:Left; line-height:1.8;">
 					<span onclick="document.getElementById('id06').style.display='none'" class="w3-button w3-display-topright w3-red">&times;</span>
 					  <h3 class="w3-panel w3-green" style="text-align:center">Select A Task <br>Jss3 B</h3>   
 							<div class=w3-row-padding>
 	     								 <div class="w3-panel  w3-third">
-					                                          <span class="" style="font-size: 1.2em;"><button class="w3-button w3-green w3-round-xlarge" onclick="myFunction_21()">1sterm_23/24 Records</button></span>
+					                                          <span class="" style="font-size: 1.2em;"><button class="w3-button w3-green w3-round-xlarge" onclick="myFunction_216()">1sterm_23/24 Records</button></span>
 					                                      </div>
 					                    
 					                              <div class="w3-panel w3-third">
