--- a/schportal.html
+++ b/schportal.html
@@ -767,8 +767,11 @@
                                                   <a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p> 
                                               </div>
                                           <div id="ss1A3rdtermart" class="myRecord">
-                                              <p><a href="https://forms.gle/SgeANA1GYk7QURPA6" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Mid_Exam</a>
+                                              <p><a href="#" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Mid_Exam</a>
                                                 <a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p>
+
+                                                <p><a href="https://forms.gle/SgeANA1GYk7QURPA6" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Exam</a>
+                                                  <a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p>
                                           </div>
 
                                     </div>
@@ -810,7 +813,7 @@
                                           <div id="ss1A3rdtermcom" class="myRecord">
                                               <p><a href="#" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Mid_Exam</a>
                                                 <a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p>
-                                                <a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p>
+                                                
                                             <p><a href="https://forms.gle/Q9NZPuiNcHfHHdCH9" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Exam</a>
                                               <a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p> 
                                           </div>
