--- a/schportal.html
+++ b/schportal.html
@@ -1076,7 +1076,7 @@
                         <div id="ss23rdtermart" class="myRecord">
                             <!--<p><a href="#" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Mid_Exam</a>
                               <a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p>-->
-                          <p><a href="#" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Exam</a>
+                          <p><a href="https://forms.gle/VLiyqAGauC87LzyJ6" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Exam</a>
                             <a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p> 
                         </div>
 
@@ -1122,7 +1122,7 @@
                     <div id="ss23rdtermcom" class="myRecord">
                         <!--<p><a href="#" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Mid_Exam</a>
                           <a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p>-->
-                      <p><a href="#" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Exam</a>
+                      <p><a href="https://forms.gle/DcTCcqHGXfUbA3y7A" class="w3-btn w3-black w3-round-large w3-border w3-border-white">3rdTerm Exam</a>
                         <a href="#" class="w3-btn w3-dark-grey w3-round-large w3-border w3-border-white">View Results</a></p> 
                     </div>
 
